--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
               >
             </li>
             <li class="menu-list">
-              <a class="menu-item" href="#" class="menu-link">Портфолио</a>
+              <div class="line">
+                <a class="menu-item" href="#" class="menu-link">Портфолио</a>
+              </div>
             </li>
             <li class="menu-list">
               <a class="menu-item" href="#" class="menu-link">Контакты</a>
@@ -87,159 +89,251 @@
           <ul class="content">
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img1.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img1.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="title">Технокряк</h2>
                 <p class="title-second">Веб-сайт</p>
-                <p hidden class=".visually-hidden">
-                  ехнокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+
                 <h2 class="title">Постер New Orlean vs Golden Star</h2>
                 <p class="title-second">Дизайн</p>
-                <p hidden class=".visually-hidden">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Provident, iure! Libero cum doloremque aperiam rem sapiente ea
-                  beatae officiis dolore? Pariatur, praesentium eos odio iusto
-                  ad voluptatem harum sunt. Unde.
-                </p>
               </a>
             </li>
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img3.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img3.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <!-- 
+                /> -->
                 <h2 class="title">Ресторан Seafood</h2>
                 <p class="title-second">Приложениет</p>
-                <p hidden class=".visually-hidden">
+                <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Provident ea tempora consequuntur, aperiam tenetur delectus
                   laudantium beatae obcaecati numquam distinctio sed eos et
                   optio doloremque praesentium, iste aspernatur omnis quam?
-                </p>
+                </p> -->
               </a>
             </li>
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img4.jpg"
-                  alt="Проект Prime"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img4.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <!-- 
+                /> -->
                 <h2 class="title">Проект Prime</h2>
                 <p class="title-second">Маркетинг</p>
-                <p hidden class=".visually-hidden">
+                <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Praesentium voluptates dolorem nulla tempora fugit ducimus
                   libero laborum aliquam excepturi deleniti deserunt, quam magni
                   nostrum quos, veritatis maxime! Nihil, commodi quaerat.
-                </p>
+                </p> -->
               </a>
             </li>
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img5.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img5.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <!-- 
+                /> -->
                 <h2 class="title">Проект Boxes</h2>
                 <p class="title-second">Приложениет</p>
-                <p hidden class=".visually-hidden">
+                <!-- <p hidden class=".visually-hidden">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi
                   voluptatibus tenetur eaque sint quos laudantium velit debitis,
                   ullam incidunt, deleniti inventore nesciunt exercitationem
                   dicta, cum sit quaerat mollitia molestias porro.
-                </p>
+                </p> -->
               </a>
             </li>
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img6.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img6.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <!-- 
+                /> -->
                 <h2 class="title">Inspiration has no Borders</h2>
                 <p class="title-second">Веб-сайт</p>
-                <p hidden class=".visually-hidden">
+                <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Perferendis eos est enim, dignissimos quod libero laborum
                   consequuntur ut numquam fuga qui nemo ratione labore. Veniam
                   quia minus dolores enim eveniet.
-                </p>
+                </p> -->
               </a>
             </li>
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img7.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img7.jpg"
+                    alt="Издание Limited Edition"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <!-- 
+                /> -->
                 <h2 class="title">Издание Limited Edition</h2>
                 <p class="title-second">Дизайн</p>
-                <p hidden class=".visually-hidden">
+                <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Tempora, minus sit. Placeat necessitatibus odit error suscipit
                   vitae a saepe impedit! Ea ab harum vitae minima impedit
                   explicabo libero enim minus!
-                </p>
+                </p> -->
               </a>
             </li>
             <li class="content-list">
               <a class="link" href="">
-                <img
-                  src="./imeg/img8.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="box-foto">
+                  <img
+                    src="./imeg/img8.jpg"
+                    alt="Проект LAB"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <!-- 
+                /> -->
                 <h2 class="title">Проект LAB</h2>
                 <p class="title-second">Маркетинг</p>
-                <p hidden class=".visually-hidden">
+                <!-- <p hidden class=".visually-hidden">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. At
                   obcaecati molestiae quod alias quam autem reprehenderit fugiat
                   voluptatum laboriosam totam? Consequatur alias repellendus
                   debitis omnis cupiditate necessitatibus reiciendis perferendis
                   quos?
-                </p>
+                </p> -->
               </a>
             </li>
             <li class="content-list">
-              <a class="link" href="">
-                <img src="./imeg/img9.jpg" alt="Growing Business" />
+              <a class="link" href="#">
+                <div class="box-foto">
+                  <img src="./imeg/img9.jpg" alt="Growing Business" />
+                  <div class="box-hover">
+                    <p class="text-hover">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="title">Growing Business</h2>
                 <p class="title-second">Приложение</p>
-                <p hidden class=".visually-hidden">
+                <!-- <p hidden class=".visually-hidden">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Sequi, accusantium cumque, magnam error cupiditate saepe iusto
                   libero natus magni rerum id voluptates minus. Temporibus
                   voluptates sapiente nobis eligendi, illo earum.
-                </p>
+                </p> -->
               </a>
             </li>
           </ul>
