--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                     </p>
                   </div>
                 </div>
-                <h2 class="title">Технокряк</h2>
-                <p class="title-second">Веб-сайт</p>
+                <div class="title-box">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="title-second">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="content-list">
@@ -127,9 +129,10 @@
                     </p>
                   </div>
                 </div>
-
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="title-second">Дизайн</p>
+                <div class="title-box">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="title-second">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="content-list">
@@ -150,10 +153,10 @@
                     </p>
                   </div>
                 </div>
-                <!-- 
-                /> -->
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="title-second">Приложениет</p>
+                <div class="title-box">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="title-second">Приложениет</p>
+                </div>
                 <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Provident ea tempora consequuntur, aperiam tenetur delectus
@@ -180,10 +183,10 @@
                     </p>
                   </div>
                 </div>
-                <!-- 
-                /> -->
-                <h2 class="title">Проект Prime</h2>
-                <p class="title-second">Маркетинг</p>
+                <div class="title-box">
+                  <h2 class="title">Проект Prime</h2>
+                  <p class="title-second">Маркетинг</p>
+                </div>
                 <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Praesentium voluptates dolorem nulla tempora fugit ducimus
@@ -212,8 +215,10 @@
                 </div>
                 <!-- 
                 /> -->
-                <h2 class="title">Проект Boxes</h2>
-                <p class="title-second">Приложениет</p>
+                <div class="title-box">
+                  <h2 class="title">Проект Boxes</h2>
+                  <p class="title-second">Приложениет</p>
+                </div>
                 <!-- <p hidden class=".visually-hidden">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi
                   voluptatibus tenetur eaque sint quos laudantium velit debitis,
@@ -242,8 +247,10 @@
                 </div>
                 <!-- 
                 /> -->
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="title-second">Веб-сайт</p>
+                <div class="title-box">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="title-second">Веб-сайт</p>
+                </div>
                 <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Perferendis eos est enim, dignissimos quod libero laborum
@@ -272,8 +279,10 @@
                 </div>
                 <!-- 
                 /> -->
-                <h2 class="title">Издание Limited Edition</h2>
-                <p class="title-second">Дизайн</p>
+                <div class="title-box">
+                  <h2 class="title">Издание Limited Edition</h2>
+                  <p class="title-second">Дизайн</p>
+                </div>
                 <!-- <p hidden class=".visually-hidden">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Tempora, minus sit. Placeat necessitatibus odit error suscipit
@@ -302,8 +311,10 @@
                 </div>
                 <!-- 
                 /> -->
-                <h2 class="title">Проект LAB</h2>
-                <p class="title-second">Маркетинг</p>
+                <div class="title-box">
+                  <h2 class="title">Проект LAB</h2>
+                  <p class="title-second">Маркетинг</p>
+                </div>
                 <!-- <p hidden class=".visually-hidden">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. At
                   obcaecati molestiae quod alias quam autem reprehenderit fugiat
@@ -326,8 +337,10 @@
                     </p>
                   </div>
                 </div>
-                <h2 class="title">Growing Business</h2>
-                <p class="title-second">Приложение</p>
+                <div class="title-box">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="title-second">Приложение</p>
+                </div>
                 <!-- <p hidden class=".visually-hidden">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Sequi, accusantium cumque, magnam error cupiditate saepe iusto
